
[discrete]
=== Changed

* https://github.com/serpro69/kotlin-faker/pull/159[#159] Change format of dictionary files from yml to json

[discrete]
=== Fixed

* https://github.com/serpro69/kotlin-faker/pull/161[#161] Fix empty lists as parameter values
* https://github.com/serpro69/kotlin-faker/pull/171[#171] Fix locale fallback

[discrete]
=== Other

* https://github.com/serpro69/kotlin-faker/pull/168[#168] Reduce faker's shadowed jar size

====

.[1.12.0] - 2022-10-16
[%collapsible]
====
[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/134[#134] Overload `RandomService#randomSublist` and `RandomService#randomSubset` with `sizeRange` parameter
* https://github.com/serpro69/kotlin-faker/pull/144[#144] Add index and punctuation chars support to `RandomService#randomString`
* https://github.com/serpro69/kotlin-faker/pull/154[#154] New `CryptographyProvider` for generating random sha sums
* https://github.com/serpro69/kotlin-faker/pull/155[#155] [core] Update dictionary files, including:
** Data and functions in existing data providers
** Updates to existing localized dictionaries

++++
<details><summary><h3>New Data Providers</h3></summary>
<p>
++++
* `hackers`
* `mountaineering`
* `sport`
* `tarkov`
++++
</p>
</details>
++++

[discrete]
=== Changed

* https://github.com/serpro69/kotlin-faker/pull/135[#135] Initialize Faker data providers lazily

[discrete]
=== Fixed

* https://github.com/serpro69/kotlin-faker/issues/136[#136] Parameter 'streets' not found in 'ADDRESS' category
* https://github.com/serpro69/kotlin-faker/issues/137[#137] Parameter 'category' not found in 'COMPANY' category for 'ja' locale
* https://github.com/serpro69/kotlin-faker/issues/138[#138] Parameter 'zip_code' not found in 'ADDRESS' category for 'fr' locale
* https://github.com/serpro69/kotlin-faker/issues/140[#140] Fix NPE when generating CurrencySymbol with non 'en' locale